[package]
name = "scuffle-config"
version = "0.0.1"
edition = "2021"
authors = ["Scuffle <opensource@scuffle.tv>"]
description = "Extensible config solution"
repository = "https://github.com/ScuffleTV/scuffle"
categories = ["config"]
keywords = ["config", "cli", "proc-macro"]
license = "MIT"
documentation = "https://docs.rs/scuffle-config"

[features]
json = ["serde_json"]
yaml = ["serde_yaml"]

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
tracing = "0.1"
serde_ignored = "0.1"
serde-value = "0.7"
serde_path_to_error = "0.1"
humantime = "2.1"
num-order = "1.2"
uuid = { version = "1.6", features = ["serde"] }
ulid = { version = "1.1", features = ["serde", "uuid"] }

# Parsing files
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }

# CLI
clap = { version = "4.4", features = ["cargo", "string"], optional = true }
convert_case = "0.6"

# Derive macro
config_derive = { path = "derive", package = "scuffle_config_derive", version = "0.0.1"}

[[example]]
name = "derive"
path = "examples/derive.rs"
features = ["json", "yaml", "clap"]
